--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.androidaccidentapp">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -19,11 +18,19 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
-        android:requestLegacyExternalStorage="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">
+        <activity
+            android:name=".HandbookPractices"
+            android:exported="true" />
+        <activity
+            android:name=".HandbookSafety"
+            android:exported="true" />
+        <activity
+            android:name=".HandbookInsurance"
+            android:exported="true" />
         <activity
             android:name=".finalCheck"
             android:exported="true" />
@@ -32,41 +39,28 @@
             android:exported="true" />
         <activity
             android:name=".vehicleRegistration"
-            android:exported="true">
-
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".Step2"
-            android:exported="true">
-
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".insuranceRegistration"
-            android:exported="true">
-
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".driveRegistration"
-            android:exported="true">
-
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".GeneratePDF"
-            android:exported="true" >
-
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".Home"
-            android:exported="true">
-
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".Step22"
             android:exported="true" />
         <activity
             android:name=".Step3"
             android:exported="true" />
-
         <activity
             android:name=".Camera"
             android:exported="true" />
@@ -85,16 +79,12 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-
         <activity
             android:name=".finalExchangeActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".driverInfo"
-            android:exported="false">
-
-
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".SavedVehicles"
             android:exported="false" />
@@ -103,31 +93,19 @@
             android:exported="false" />
         <activity
             android:name=".VehicleDetails"
-            android:exported="true">
-
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".Registering"
-            android:exported="true">
-
-        </activity>
-
+            android:exported="true" />
         <activity
             android:name=".Handbook"
-            android:exported="true">
-
-
-        </activity>
-
+            android:exported="true" />
         <activity
             android:name=".insuranceExchange"
             android:exported="true" />
         <activity
             android:name=".MapsActivity"
-            android:exported="true">
-
-        </activity>
-
+            android:exported="true" />
         <activity
             android:name=".ProfileInsurance"
             android:exported="false" />
@@ -139,21 +117,15 @@
             android:exported="false" />
         <activity
             android:name=".Login"
-            android:exported="true" >
-
-
-
-        </activity>
-
+            android:exported="true" />
         <activity
             android:name=".SplashScreen"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
         <provider
@@ -165,7 +137,6 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
-
     </application>
 
 </manifest>
